--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    repositories{
+                mavenCentral()
+                maven{url"https://jitpack.io"}
+            }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
+        compile 'org.osmdroid:osmdroid-android:5.6.3'
+        compile 'com.github.MKergall:osmbonuspack:6.2'
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
